Started styling graphs

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <ul class="bar"></ul>
 
-    <table class="charts-css column show-labels" id="my-chart">
+    <table class="charts-css column show-labels data-spacing-3"" id="my-chart">
       <tbody></tbody>
     </table>
     <div class="attribution">
