--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
         <img src="./images/logo.svg" alt="">
       </header>
-      
+
       <article>
-        <h2>Sending - Last 7 days</h2>
+        <h2>Spending - Last 7 days</h2>
         <table class="charts-css column show-labels data-spacing-3"" id="my-chart">
           <tbody>
             
